force-app/main/default/objects/Candidates__c/Candidates__c.object-meta.xml
<CustomObject>
    <label>Candidate</label>
    <nameField>
        <label>Candidates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>