force-app/main/default/objects/Candidates__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <length>20</length>
    <type>Text</type>
</CustomField>