force-app/main/default/objects/Candidates__c/fields/Job_Opening__c.field-meta.xml
<CustomField>
    <fullName>Job_Opening__c</fullName>
    <label>Job Opening</label>
    <referenceTo>Job_Opening__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>