force-app/main/default/objects/Candidates__c/fields/Parent_JO_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_JO_Id__c</fullName>
    <formula>Job_Opening__r.Job_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent JO Id</label>
    <type>Text</type>
</CustomField>