force-app/main/default/objects/Candidates__c/recordTypes/INDIAN.recordType-meta.xml
<RecordType>
    <fullName>INDIAN</fullName>
    <active>true</active>
    <label>INDIAN</label>
</RecordType>