force-app/main/default/objects/Candidates__c/recordTypes/NRI.recordType-meta.xml
<RecordType>
    <fullName>NRI</fullName>
    <active>true</active>
    <label>NRI</label>
</RecordType>