force-app/main/default/objects/Candidates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Job_Opening__c</columns>
    <columns>Education__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Parent_JO_Id__c</columns>
    <columns>Gender__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>