force-app/main/default/objects/Candidates__c/listViews/IND_Candidates.listView-meta.xml
<ListView>
    <fullName>IND_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Certification__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Education__c</columns>
    <columns>Experience_in_Years__c</columns>
    <columns>Gender__c</columns>
    <columns>Job_Opening__c</columns>
    <columns>Location__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Parent_JO_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <columns>Salary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Candidates__c.INDIAN</value>
    </filters>
    <label>IND Candidates</label>
</ListView>